--- a/src/pages/SelectClinician/SelectClinician.css
+++ b/src/pages/SelectClinician/SelectClinician.css
@@ -8,7 +8,8 @@
 .cover-box1 {
   flex: 1;
   background-color: #f8f8f8;
-  box-shadow: 0 4px 6px -6px #222, 0 4px 6px -6px #222;
+  /* box-shadow: 0 4px 6px -6px #222, 0 4px 6px -6px #222; */
+  box-shadow: 2px 2px 2px lightgrey;
   padding-left: 1em;
   padding-right: 1em;
 }
@@ -18,7 +19,7 @@
   flex: 5;
   background-color: #E5F5FD;
   border-radius: 5px;
-  box-shadow: 0 4px 6px -6px #222;
+  box-shadow: 2px 2px 2px lightgrey;
 }
 
 .cover-box2 h2{
@@ -29,11 +30,13 @@
 .requests {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  margin-right: 2em;
+  margin-left: 2em;
 }
 
 .request-1 {
-  width: 12em;
+  /* width: 12em; */
+  flex: 0.3;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
@@ -44,7 +47,11 @@
   background-color: white;
   border-top: solid 3px #63BC9B;
   margin-bottom: 2em;
-  box-shadow: 0 4px 6px -6px #222;
+  box-shadow: 2px 2px 2px lightgrey;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5pt;
 }
 
 .request-1 img {
@@ -63,455 +70,88 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: auto;
-  margin-top: 1em;
+  /* margin-bottom: auto; */
+  /* margin-top: 2em; */
+  justify-content: flex-end;
 }
 
 h1 {
   font-weight: normal;
-}
-/* * {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
+  font-size: 24pt;
 }
 
-body {
-  font: sans-serif;
-}
-
-.title h1 {
-  margin-top: 0.5rem;
-  font-size: 30px;
-}
-
-h1 {
-  margin-left: 70px;
-  margin-bottom: 30px;
-  margin-right: 5vw;
-  margin-top: 30px;
-  font-size: 40px;
-}
-h2 {
-  font-size: 35px;
-  font-weight: bold;
-}
 .search-bar {
   display: flex;
   flex-direction: row;
 }
+
 .search-container {
-  display: flex;
-  margin-bottom: 20px;
-  width:30%;
-  background-color: #F8F8F8;
-  border-radius: 5px;
-  padding: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  /* align-items: right; */
+  margin-right: auto;
+  margin-left: 1.5em;
+  margin-top: 1em;
+  /* background-color: #f8f8f8; */
+}
+
+.search-container input {
+  border: none;
+  background-color: #f8f8f8;
+  padding: 1em;
+  padding-left: 2em;
+  padding-right: 20em;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  box-shadow: 2px 2px 2px lightgrey;
+}
+
+.search-container button {
+  border: none;
+  background-color: #f8f8f8;
+  border-right: 2px solid white;
+  padding: 1em;
+  padding-left: 2em;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  box-shadow: 2px 2px 2px lightgrey;
+
+}
+
+.request-1 h3,h4 {
+  font-weight: normal;
+  /* display: block;
   margin-left: auto;
-  margin-right: 80px;
+  margin-right: auto; */
+}
+.request-1 h3 {
+  font-size: 20pt;
 }
 
-input[type="text"] {
-  padding: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  font-size: 16px;
-  border: none;
-  background-color: #F8F8F8;
-  border-radius: 5px;
-  margin-right: 10px;
-  width:30vw;
-}
-img {
-  margin: 0px;
-  padding: 0px;
-  width: 100%;
+.request-1 h4 {
+  font-size: 14pt;
 }
 
-button {
-  padding: 5px 10px;
-  font-size: 16px;
-  cursor: pointer;
-  background-color: #F8F8F8;
-  color: #8E8E8E;
-  border: none;
-  border-radius: 5px;
-}
-
-.cover-box1 {
-  border-radius: 15px;
-  box-shadow: 5px 5px 5px lightgrey;
-  padding: 10px;
-  margin-left: 70px; 
-  margin-top: 0px;
-  background: lightgrey;
-}
-
-.filter-menu h4 {
-  font-size: 20px;
-  margin-left: -50px;
-}
-
-.filter-container {
-  display: flex;
-  justify-content: space-between;
-  z-index: 1;
-  width: 100%;
-  margin: 0px auto;
-  padding: 0px 50px;
-  padding-right: 20px;
-}
-
-.filter-menu {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  text-align: center;
-  font-family: sans-serif
-}
-
-
-.radio-container,
-.checkbox-item {
-  display: flex;
-  align-items: center;
-  margin-bottom: 5px;
-}
-
-.radio-button,
-.radio {
-  margin-left: -70px;
-}
-
-.radiomark {
-  margin-left: -110px;
-}
-
-.checkbox-item,
-.checkmark-box {
-  margin-left: -100px;
-}
-
-.checkmark {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-
-.radio input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  text-align: center;
-}
-
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 50%;
-}
-
-.checkbox-container:hover input~.checkmark {
-  background-color: #ccc;
-}
-
-.checkbox-container input:checked~.checkmark {
-  background-color: #2196F3;
-}
-
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-.checkbox-container input:checked~.checkmark:after {
-  display: block;
-}
-
-.checkbox-container .checkmark:after {
-  top: 9px;
-  left: 9px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: white;
-}
-
-
-.flex-container {
-  display: flex;
-  flex-direction: row;
-  font: sans-serif;
-}
-
-
-.box1 {
-  border-radius: 15px;
-  padding: 20px;
-  margin-top: 0px;
-  background: #E5F5FD;
-  width: 670%;
-  margin-bottom: 20px;
-  box-shadow: 5px 5px 5px lightgrey;
-}
-
-h4 {
-  font-size: 22px;
+.clin-info {
   color: #717171;
 }
 
-.summary-box {
-  border-radius: 4px;
-  background: #E5F5FD;
-  padding: 10px;
-  margin-top: 50px;
-  width: 100%;
-}
-
-.flex-boxes {
-  display: flex;
-  flex-direction: row;
-}
-
-.box-stats {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  margin-left: 20px;
-}
-
-.box_1 {
-  background-color: #BCEEF9;
-  margin-top: 30px;
-  margin-left: 10px;
-  padding: 20px;
-  padding-bottom: -50px;
-  width: 100%;
-
-}
-
-.flex-calender {
-  display: flex;
-  flex-direction: row;
-}
-
-.flex-calender .calender {
-  margin-left: -20px;
-}
-
-.flex-calender p {
-  font-size: 25px;
-  margin-left: 20px;
-}
-
-.calender {
-  border-radius: 50%;
-  background-color: #6d82cd;
-  padding-left: 13px;
-  padding-right: 13px;
-  font-size: 60px;
-}
-
-.flex-datesRate {
-  display: flex;
-  flex-direction: row;
-}
-
-.flex-datesRate .p-22 {
-  font-size: 30px;
-  font-weight: bold;
-  margin-top: 30px;
-  margin-left: 10px;
-  margin-bottom: -40px;
-}
-
-.arrow {
-  font-size: 25px;
-  margin-left: 10px;
-  margin-top: 35px;
-  padding-left: 2px;
-  margin-right: 5px;
-}
-
-.text {
-  font-size: 18px;
-  margin-top: 35px;
-}
-
-.p-lastline {
-  font-size: 18px;
-  color: rgb(178, 172, 172);
-  margin-top: 35px;
-  margin-left: 7px;
-
-}
-
-.box_2 {
-  border: 1px solid;
-  border-radius: 4px;
-  background-color: rgb(47, 71, 212);
-  margin-top: 30px;
-  padding: 20px;
-  margin-left: 20px;
-  width: 100%;
-}
-
-.circle {
-  font-size: 28px;
-  margin-left: 70px;
-}
-
-.circle-text_1 {
-  font-size: 24px;
-  margin-top: 20px;
-  text-align: center;
-  color: white;
-}
-
-.circle-text_2 {
-  font-size: 17px;
-  margin-top: 3px;
-  text-align: center;
-  color: white;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.box_3 {
-  border: 1px solid;
-  border-radius: 4px;
-  background-color: rgb(30, 134, 231);
-  margin-top: 30px;
-  padding: 20px;
-  margin-left: 20px;
-  width: 100%;
-}
-
-.fact-check {
-  border-radius: 50%;
-  border-color: white;
-  border: 1px solid;
-  background-color: rgb(30, 134, 231);
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 40px;
-  margin-left: 50px
-}
-
-.box_4 {
-  border: 1px solid;
-  border-radius: 4px;
-  background-color: rgb(47, 71, 212);
-  margin-top: 30px;
-  padding: 20px;
-  margin-left: 20px;
-  width: 100%;
-  margin-right: 20px;
-}
-
-h3 {
-  margin-top: 30px;
-}
-
-.requests {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-
-.request-1,
-.request-2,
-.request-3 {
-  border: 1pX inset;
-  border-top: rgb(85, 220, 180) 2px solid;
-  border-radius: 4px;
-  background-color: white;
-  padding: 20px;
-  margin-top: 30px;
-  margin-left:10px;
-  margin-right: 10px;
-  text-align: center;
-  width: 100%;
-  font-size: 16px;
-}
-
-.clinician_1,
-.clinician_2,
-.clinician_3 {
-  font-size: 20px;
-  color: #B3B3B3;
-  margin-top: 20px;
-}
-
-.clinician_name1,
-.clinician_name2,
-.clinician_name3 {
-  border-radius: 10px;
-  background-color: rgb(24, 168, 245);
-  width: 100%;
-  margin-top: 6px;
-  padding: 3px;
-}
-.days {
-  display:flex;
-  flex-direction: column;
-  width:100%;
-  
-  margin-right:5px;
-}
-.times {
-  display:flex;
-  flex-direction: column;
-  width:100%;
-  margin-left: 5px;
-  margin-right:5px;
-
-}
 .consultation {
   display: flex;
-  align-self: center;
   flex-direction: row;
-  width:100%;
+}
+
+.clinician_1 {
+  margin-top:1.5em;
+  margin-bottom: 0.5em;
+  font-size: 14pt;
 }
 
 .consultation_details {
-  font-size: 16px;
-  text-align: center;
-  border-radius: 10px;
-  background-color: #d3d3d3;
-  width: 100%;
-  margin-top: 6px;
-  margin-left: 5px;
-  margin-right:5px;
-  padding: 6px;
-}
-
-.view_consultation {
-  font-size: 17px;
-  color:white;
-  background-color: #2563EB;
-  margin-top: 30px;
-  padding: 3px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  width: 100%;
+  background-color: #efefef;
+  margin: 2px;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 25pt;
   text-align: center;
 }
-
-.view_consultation a {
-  color: white;
-} */
