finished home screen

--- a/src/Navigation/Nav.css
+++ b/src/Navigation/Nav.css
@@ -9,6 +9,7 @@ nav {
     padding-right: 3em;
     overflow: hidden;
     position: sticky;
+    z-index: 1;
     top: 0;
     background-color: white;
     width: 100%;
