--- a/src/pages/TherapistPortal/TherapistPortal.css
+++ b/src/pages/TherapistPortal/TherapistPortal.css
@@ -1,360 +1,151 @@
-/* * {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-}
-
-body {
-  position: fixed;
-  width: 100%;
-  overflow: scroll;
-}
-
-h1 {
-  margin-top: 20px;
-  margin-bottom: 40px;
-  margin-left: 40px;
-  font-size: 30px;
-}
-
-.cover-box1 {
-  border: 5px;
-  border-style: groove;
-  padding: 10px;
-  margin-left: 40px;
-  margin-top: 0px;
-  background: lightgrey;
-  height: 120%;
-}
-
-.filter-menu h4 {
-  font-size: 20px;
-  margin-left: -50px;
-}
-
-.filter-container {
-  display: flex;
-  justify-content: space-between;
-  height: 80px;
-  z-index: 1;
-  width: 100%;
-  max-width: 1300px;
-  margin: 0px auto;
-  padding: 0px 50px;
-}
-
-.boxes {
-  display: flex;
-  flex-direction: row;
-  font-size: 12px;
-  font-style: sans-serif;
-}
-.filter-menu {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  text-align: center;
-  font-family: sans-serif
-}
-
-
-.radio-container,
-.checkbox-item {
-  display: flex;
-  align-items: center;
-  margin-bottom: 5px;
-}
-
-.radio-button,
-.radio {
-  margin-left: -50px;
-}
-
-.radiomark {
-  margin-left: -100px;
-}
-
-.checkbox-item,
-.checkmark-box {
-  margin-left: -100px;
-}
-
-
-.checkmark {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-
-.radio input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  text-align: center;
-}
-
-
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 50%;
-}
-
-.checkbox-container:hover input~.checkmark {
-  background-color: #ccc;
-}
-
-
-.checkbox-container input:checked~.checkmark {
-  background-color: #2196F3;
-}
-
-
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-.checkbox-container input:checked~.checkmark:after {
-  display: block;
-}
-
-.checkbox-container .checkmark:after {
-  top: 9px;
-  left: 9px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: white;
-}
-
-
 .flex-container {
   display: flex;
   flex-direction: row;
+  margin-top: 2em;
+  margin-bottom: 3em;
+  /* margin-bottom: 3em; */
 }
 
 
-.box1 {
-  align-content: center;
-  border: 5px;
-  border-style: groove;
-  padding: 20px;
-  margin-left: 40%;
-  margin-top: 0px;
-  background: rgb(198, 228, 240);
-  width: 700%;
-  margin-bottom: 20%;
+.cover-box1 {
+  flex: 1;
+  background-color: #f8f8f8;
+  /* box-shadow: 0 4px 6px -6px #222, 0 4px 6px -6px #222; */
+  box-shadow: 2px 2px 2px lightgrey;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
-h4 {
-  font-size: 22px;
+.cover-box1 h2 {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 1em;
 }
 
-.summary-box {
-  border: 3px;
-  border-style: hidden;
-  border-radius: 4px;
-  background: white;
-  padding: 10px;
-  margin-top: 30px;
-  width: 100%;
-  height: 94%;
+.cover-box2 {
+  margin-left: 2em;
+  flex: 5;
+  background-color: #E5F5FD;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px lightgrey;
 }
 
-.flex-boxes {
-  display: flex;
-  flex-direction: row;
-}
-
-.p-consultation {
-  color: black;
-  margin-left: 20px;
-  font-size: 30px;
-}
-
-.box_1 {
-  box-shadow: 5px 5px 5px lightgrey;
-  background-color: #BCEEF9;
-  margin-top: 30px;
-  margin-left: 10px;
-  padding: 20px;
-  padding-bottom: -50px;
-  width: 100%;
-}
-
-.flex-calender {
-  display: flex;
-  flex-direction: row;
-}
-
-.flex-calender .calender {
-  margin-left: -20px;
-}
-
-.flex-calender p {
-  font-size: 25px;
-  margin-left: 20px;
-}
-
-.calender {
-  border-radius: 50%;
-  border: 2px solid transparent;
-  background-color: #6d82cd;
-  padding-left: 13px;
-  padding-right: 13px;
-  font-size: 60px;
-}
-
-.flex-datesRate {
-  display: flex;
-  flex-direction: row;
-}
-
-.flex-datesRate .p-22 {
-  font-size: 30px;
-  font-weight: bold;
-  margin-top: 30px;
-  margin-left: 10px;
-  margin-bottom: -40px;
-}
-
-.arrow {
-  font-size: 25px;
-  margin-left: 10px;
-  margin-top: 35px;
-  padding-left: 2px;
-  margin-right: 5px;
-}
-
-.text {
-  font-size: 18px;
-  margin-top: 35px;
-}
-
-.p-lastline {
-  font-size: 18px;
-  color: rgb(178, 172, 172);
-  margin-top: 35px;
-  margin-left: 7px;
-
-}
-
-.box_2 {
-  box-shadow: 5px 5px 5px lightgrey;
-  background-color: rgb(47, 71, 212);
-  margin-top: 30px;
-  padding: 10px;
-  margin-left: 20px;
-  width: 100%;
-}
-
-.circle {
-  font-size: 28px;
-  margin-left: 70px;
-}
-
-.circle-text_1 {
-  font-size: 24px;
-  margin-top: 20px;
-  text-align: center;
-  color: white;
-}
-
-.circle-text_2 {
-  font-size: 17px;
-  margin-top: 3px;
-  text-align: center;
-  color: white;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.box_3 {
-  box-shadow: 5px 5px 5px lightgrey;
-  background-color: rgb(30, 134, 231);
-  margin-top: 30px;
-  padding: 10px;
-  margin-left: 20px;
-  width: 100%;
-}
-
-.fact-check {
-  border-radius: 50%;
-  border-color: white;
-  border: 1px solid;
-  background-color: rgb(30, 134, 231);
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 40px;
-  margin-left: 50px
-}
-
-.box_4 {
-  box-shadow: 5px 5px 5px lightgrey;
-  background-color: rgb(47, 71, 212);
-  margin-top: 30px;
-  padding: 10px;
-  margin-left: 20px;
-  width: 100%;
-  margin-right: 20px;
-}
-
-h3 {
-  margin-top: 30px;
+.cover-box2 h2{
+  margin-left: 2em;
+  flex: 5;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .requests {
   display: flex;
   flex-direction: row;
+  margin-right: 2em;
+  margin-left: 2em;
 }
 
-.request-1,
-.request-2,
-.request-3 {
-  border: 1pX inset;
-  border-top: rgb(85, 220, 180) 2px solid;
-  border-radius: 4px;
+.request-1 {
+  /* width: 12em; */
+  flex: 0.3;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-top: 3em;
+  padding-bottom: 1em;
   background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 10px;
+  border-top: solid 3px #63BC9B;
+  margin-bottom: 2em;
+  box-shadow: 2px 2px 2px lightgrey;
   text-align: center;
-  width: 100%;
-  font-size: 17px;
-  height: 30%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5pt;
+  position: relative;
 }
 
-.clinician_1,
-.clinician_2,
-.clinician_3 {
-  font-size: 15px;
-  color: #B3B3B3;
-  margin-top: 20px;
+.request-1 img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.clinician_name1,
-.clinician_name2,
-.clinician_name3 {
-  border-radius: 10px;
-  background-color: rgb(24, 168, 245);
-  width: 100%;
-  margin-top: 6px;
-  margin-left: 30px;
-  padding: 3px;
+.request-1 a {
+  background-color: #2563EB;
+  color: white;
+  padding-left: 3em;
+  padding-right: 3em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-bottom: auto; */
+  /* margin-top: 2em; */
+  justify-content: flex-end;
+}
+
+h1 {
+  font-weight: normal;
+  font-size: 24pt;
+  margin-top: 0.25em;
+}
+
+.search-bar {
+  display: flex;
+  flex-direction: row;
+  margin-top: 2em;
+}
+
+.search-container {
+  /* align-items: right; */
+  margin-right: auto;
+  margin-left: 1.5em;
+  margin-top: 0.25em;
+  /* background-color: #f8f8f8; */
+}
+
+.search-container input {
+  border: none;
+  background-color: #f8f8f8;
+  padding: 1em;
+  padding-left: 2em;
+  padding-right: 20em;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  box-shadow: 2px 2px 2px lightgrey;
+}
+
+.search-container button {
+  border: none;
+  background-color: #f8f8f8;
+  border-right: 2px solid white;
+  padding: 1em;
+  padding-left: 2em;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  box-shadow: 2px 2px 2px lightgrey;
+
+}
+
+.request-1 h3,h4 {
+  font-weight: normal;
+  /* display: block;
+  margin-left: auto;
+  margin-right: auto; */
+}
+.request-1 h3 {
+  font-size: 20pt;
+  margin-top: 1em;
+}
+
+.request-1 h4 {
+  font-size: 14pt;
+}
+
+.clin-info {
+  color: #717171;
 }
 
 .consultation {
@@ -362,43 +153,178 @@ h3 {
   flex-direction: row;
 }
 
+.clinician_1 {
+  margin-top:1.5em;
+  margin-bottom: 0.5em;
+  font-size: 14pt;
+}
+
 .consultation_details {
-  font-size: 16px;
+  background-color: #efefef;
+  margin: 2px;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 25pt;
   text-align: center;
-  border-radius: 10px;
-  background-color: #d3d3d3;
-  width: 100%;
-  margin-top: 6px;
-  margin-left: 30px;
-  padding: 6px;
+  box-shadow: 1px 1px 1px lightgrey;
 }
 
-.view_consultation button {
-  border: 1px inset;
-  font-size: 17px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  background-color: rgb(24, 168, 245);
-  margin-top: 30px;
-  margin-left: 30px;
-  padding: 5px;
-  width: 100%;
-  text-align: center;
-  cursor: pointer;
+.filter-menu h4 {
+  font-size: 14pt;
+  margin-bottom: 1em;
+  margin-left: 1em;
 }
 
-.view_consultation a {
+
+.filter-menu {
+  display: flex;
+  flex-direction: row;
+  text-align: start;
+}
+
+.radio-button input {
+  margin-top: 0.5em;
+  margin-left: 3em;
+}
+
+.checkbox-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1.25em;
+  margin-bottom: 2em;
+}
+
+.checkbox-item {
+  margin-top: 0.1em;
+  margin-bottom: 0.1em;
+}
+
+.checkmark-box {
+  margin-left: 0.5em;
+}
+
+.view_consultation {
+  position: absolute;
+  margin-top: 1em;
+  bottom: 0;
+  margin-bottom: 1em;
+}
+
+.consultation {
+  margin-bottom: 2em;
+  justify-content: center;
+}
+
+.clin-info {
+  margin-bottom: 1em;
+}
+
+.check-all span{
+  margin-left: 0.5em;
+}
+
+.check-all {
+  justify-content: flex-end;
+  margin-top: 1em;
+}
+
+.summary-box {
+  background-color: white;
+  box-shadow: 2px 2px 2px lightgrey;
+  margin-left: 3em;
+  margin-right: 3em;
+  margin-bottom: 1em;
+  border-radius: 5pt;
+  padding: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+.flex-boxes {
+  display: flex;
+  flex-direction: row;
+}
+
+.box_1 {
+  background-color: #F8FAFC;
+  box-shadow: 2px 2px 2px lightgrey;
+  padding: 1em;
+  padding-right: 5em;
+  
+}
+
+.tile-head {
+  display: flex;
+  flex-direction: row;
+}
+
+.p-consultation {
+  margin-left: 1em;
+  font-size: 16pt;
+  margin-bottom: 0.25em;
+}
+
+.flex-datesRate {
+  display: flex;
+  flex-direction: row;
+  margin-top: 2em;
+  justify-content: flex-end;
+  /* position: relative; */
+}
+
+.p-22 {
+  font-size: 36pt;
+}
+
+.flex-datesRate span {
+  color: #0A9D4C;
+  padding-right: 0.25em;
+}
+
+.boxes {
+  display: flex;
+  flex-direction: row;
+  margin-left: 3em;
+  justify-content: space-between;
+}
+
+.box_2 {
+  background-color:#2563EB;
   color: white;
+  text-align: center;
+  width: 8em;
+  /* margin-left: auto; */
+  margin-right: 2em;
+  /* padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 1em; */
+  padding: 1em;
 }
 
-.view_consultation button {
-  margin-left: 80px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  padding: 3px;
-  width: 30%;
-  background-color: blue;
-  color: whitesmoke;
-  font-size: 15px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  cursor: pointer;
+.box_3 {
+  background-color:#38BDF8;
+  color: white;
+  text-align: center;
+  width: 8em;
+  /* margin-left: auto; */
+  margin-right: 2em;
+  padding: 1em;
+}
+
+.box_4 {
+  background-color:#717171;
+  color: white;
+  text-align: center;
+  width: 8em;
+  /* margin-left: auto; */
+  margin-right: 2em;
+  padding: 1em;
+}
+/* .stat-detail {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  bottom: 0;
 } */
