--- a/src/pages/TherapistPortal/TherapistPortal.css
+++ b/src/pages/TherapistPortal/TherapistPortal.css
@@ -6,7 +6,9 @@
   /* margin-bottom: 3em; */
 }
 
-
+.therapist-portal-page h1 {
+  margin-top: 1.5em;
+}
 .cover-box1 {
   flex: 1;
   background-color: #f8f8f8;
