--- a/src/pages/PatientInfoForm/PatientInfoForm.css
+++ b/src/pages/PatientInfoForm/PatientInfoForm.css
@@ -18,10 +18,10 @@
 
 .sub-heading {
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 700;
 }
 
-.input-field, .long-input-field{
+.input-field, .long-input-field, .short-input-field{
     margin-right: auto;
     margin-left: 1.5em;
     margin-top: 0.25em;
@@ -36,11 +36,20 @@
     border-radius: 25px;
     box-shadow: 2px 2px 2px lightgrey;
 }
+/* I didn't know how to make the boxes evenly distribute depending on the size of the outer div box :(  */
+.short-input-field input {
+    border: none;
+    background-color: #f8f8f8;
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 20em;
+    border-radius: 25px;
+    box-shadow: 2px 2px 2px lightgrey;
+}
 
 .long-input-field input {
     border: none;
     background-color: #f8f8f8;
-    width: 1075px;
     padding: 1em;
     padding-left: 2em;
     padding-right: 20em;
