--- a/src/pages/PatientInfoForm/PatientInfoForm.css
+++ b/src/pages/PatientInfoForm/PatientInfoForm.css
@@ -203,6 +203,20 @@
 .dis-check {
     margin-bottom: 0.5em;
 }
+
+.schedule-button {
+    background-color: #2563EB;
+    margin-bottom: 2em;
+    box-shadow: 2px 2px 2px lightgrey;
+}
+
+.schedule-button button {
+    background-color: #2563EB;
+    border: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 /* .look-discuss input:checked + .look-discuss label {
     background-color: #2563EB;
 } */
