--- a/src/pages/Tapia/Tapia.css
+++ b/src/pages/Tapia/Tapia.css
@@ -5,7 +5,7 @@
 }
 
 .next-button {
-    /* background-color: blue; */
+    background-color: blue;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 3px;
@@ -14,13 +14,13 @@
     margin-left: auto;
     margin-right: 35px;
     margin-top: 3em;
+    color: white;
 }
 
 .next-button a {
     font-size: 20px;
     /* color: white; */
-    color: darkgray;
-    border-left: 2px solid lightgray;
+    color: white;
     padding-left: 0.5em;
 }
 
