--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -126,12 +126,12 @@
   background: #ececec;
   border: none;
   outline: none;
-  padding: 10px 10px 7.5px;
+  padding: 12px 10px 12px;
   border-radius: 4px;
   color: #fff;
   font-weight: 500;
   font-size: 1em;
-  color: #bcbcbc;
+  color: #000000;
   font-size: 10pt;
   margin-top: 3px;
 }
