--- a/src/pages/Silva/Silva.css
+++ b/src/pages/Silva/Silva.css
@@ -1,11 +1,10 @@
-.details {
+/* .details {
     display: flex;
     flex-direction: row;
     margin-top: 2em;
 }
 
 .next-button {
-    /* background-color: blue; */
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 3px;
@@ -18,7 +17,6 @@
 
 .next-button a {
     font-size: 20px;
-    /* color: white; */
     color: darkgray;
     border-left: 2px solid lightgray;
     padding-left: 0.5em;
@@ -73,4 +71,4 @@ h4{
     display: flex;
     flex-direction: row;
     margin-bottom: 3em;
-}
+} */
